--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.meazza.arcade">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".di.App"
@@ -13,9 +13,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.duck_hunt.ranking.RankingActivity"
+            android:parentActivityName=".ui.duck_hunt.DuckHuntActivity" />
+        <activity
             android:name=".ui.duck_hunt.DuckHuntActivity"
-            android:theme="@style/GameTheme">
-        </activity>
+            android:theme="@style/GameTheme" />
         <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
